--- a/styles.css
+++ b/styles.css
@@ -67,8 +67,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: 'PP Nikkei Maru', sans-serif;
+    font-family: 'PP Right Didone', sans-serif;
+
     color: #fff;
+    font-size: 24px;
 }
 
 .main-container {
@@ -81,6 +83,22 @@ body {
 
     padding: 75px 100px;
     border: 5px dashed #fff;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+
+    margin-top: 25px;
+
+    padding: 75px 100px;
+    max-width: 800px;
+}
+
+li {
+    margin: 10px 0;
 }
 
 .big-text {
@@ -99,8 +117,33 @@ body {
 }
 
 .special-text {
-    font-family: 'PP Right Didone', serif;
+    font-family: 'PP Nikkei Maru', serif;
 }
+
+.header {
+    position: absolute; 
+    top: 20px;
+    right: 20px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 20px;
+
+    width: 100%;
+}
+
+.header-link {
+    font-size: 36px;
+    text-decoration: none;
+    color: #fff; 
+}
+
+.header-link:hover {
+    text-decoration: underline;
+}
+
+
 
 @keyframes wiggle {
     0% { transform: rotate(0deg); }
